--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "summm",
   "version": "0.1.1",
-  "description": "Calculate the sum of two numbers",
+  "description": "Safely get the sum of numbers",
   "main": "index.js",
   "scripts": {
-    "test": "lab test.js"
+    "test": "standard && tape test.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,11 @@
   },
   "homepage": "https://github.com/bsiddiqui/summm#readme",
   "dependencies": {
+    "args-to-array": "^1.0.0",
     "is-numeric": "0.0.3"
+  },
+  "devDependencies": {
+    "standard": "^5.2.2",
+    "tape": "^4.2.0"
   }
 }
