--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/bsiddiqui/summm#readme",
   "dependencies": {
     "args-to-array": "^1.0.0",
-    "is-numeric": "0.0.3"
+    "isnumeric": "^0.3.1"
   },
   "devDependencies": {
     "standard": "^5.2.2",
